Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1789

ScannerKeepAlive leaks RPCs when scanner is already expired

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • 1.1.0
    • 1.2.0
    • tserver
    • None

    Description

      The ScannerKeepAlive RPC, if it fails to find the scanner, currently forgets to respond to the RPC. Thus the client will always time out, plus we end up leaking a bit of memory.

      Attachments

        Activity

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: