KUDU-1789. Fix ScannerKeepAlive leaking RPCs when scanner is already expired

Change-Id: Icbd9b01a80ab37efe867d547362df72b019272bd
Reviewed-on: http://gerrit.cloudera.org:8080/5379
Tested-by: Kudu Jenkins
Reviewed-by: Jean-Daniel Cryans <jdcryans@apache.org>
Reviewed-by: Adar Dembo <adar@cloudera.com>